--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
+import Layout from "../layouts/Layout.astro";
+import Navbar from "../components/Navbar.astro";
 ---
 
-<Layout>
-	<h1>Eurovision 24 homestudio</h1>
+<Layout title="Eurovision 24 homestudio">
+	<h1>Tervetuloa</h1>
 </Layout>
 
-<style>
-	
-</style>
+<style></style>
