--- a/src/pages/round/[round].astro
+++ b/src/pages/round/[round].astro
@@ -4,8 +4,7 @@ import Navbar from "../../components/Navbar.astro";
 
 export const api_url = import.meta.env.API_URL;
 
-const { url } = Astro.request;
-const round_num = url.split("/")[url.split("/").length - 1];
+const { round } = Astro.params;
 
 type Participant = {
     id: number;
@@ -19,14 +18,14 @@ type Participant = {
     round_num: number;
     turn: number;
 };
-const participants = await fetch(api_url + "/participant/round/" + round_num);
+const participants = await fetch(api_url + "/participant/round/" + round);
 const participant_data: Participant[] = await participants.json();
 ---
 
 <Layout title="Eurovision 24 homestudio">
     {
         participant_data.map((participant) => (
-            <a href="">
+            <a href={"/participant/"+participant.country}>
                 <section class="flex flex-1 mb-5 border rounded-xl p-4 shadow gap-5 items-center">
                     <div class="text-3xl w-16 text-center">
                         {participant.turn}
