CHANGE Visual changes

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,9 +2,9 @@
 
 ---
 
-<header class="mb-5 bg-gray-200 p-3">
+<header class="mb-5 bg-slate-600 p-3 text-slate-200">
     <nav class="flex justify-between">
-        <a href="/" class="navbar-brand">Eurovision 24 homestudio</a>
+        <a href="/" class="navbar-brand text-xl font-semibold">Eurovision 24 homestudio</a>
         <ul
             class="flex flex-1 justify-center items-center gap-16 max-lg:hidden"
         >
@@ -12,6 +12,6 @@
             <li><a href="/round/2">2. Semifinaali</a></li>
             <li><a href="/round/3">Finaali</a></li>
         </ul>
-        <a href="/login" class="btn btn-primary">Kirjaudu sisään</a>
+        <a href="/login" class="">Kirjaudu</a>
     </nav>
 </header>
