--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,9 +16,10 @@ const { title = "Eurovision homestudio" } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>{title}</title>
 	</head>
-	<body class="min-h-screen">
+	<body class="min-h-screen bg-gray-100">
 		<Navbar />
 		<div class="container">
 			<slot />
