--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,17 +1,54 @@
 ---
+const date = new Date();
 
+const day = date.getDate();
+
+const api_key = Astro.cookies.get("apikey");
 ---
 
 <header class="mb-5 bg-slate-600 p-3 text-slate-200">
     <nav class="flex justify-between">
-        <a href="/" class="navbar-brand text-xl font-semibold">Eurovision 24 homestudio</a>
+        <a href="/" class="navbar-brand text-xl font-semibold"
+            >Eurovision 24 homestudio</a
+        >
         <ul
             class="flex flex-1 justify-center items-center gap-16 max-lg:hidden"
         >
-            <li><a href="/round/1">1. Semifinaali</a></li>
-            <li><a href="/round/2">2. Semifinaali</a></li>
-            <li><a href="/round/3">Finaali</a></li>
+            {
+                day == 7 && api_key && (
+                    <li>
+                        <a href="/round/1">1. Semifinaali</a>
+                    </li>
+                )
+            }
+            {
+                day == 9 && api_key && (
+                    <li>
+                        <a href="/round/2">2. Semifinaali</a>
+                    </li>
+                )
+            }
+            {
+                day == 11 && api_key && (
+                    <li>
+                        <a href="/round/3">Finaali</a>
+                    </li>
+                )
+            }
         </ul>
-        <a href="/login" class="">Kirjaudu</a>
+        {
+            api_key && (
+                <a href="/logout" class="">
+                    Kirjaudu ulos
+                </a>
+            )
+        }
+        {
+            !api_key && (
+                <a href="/login" class="">
+                    Kirjaudu
+                </a>
+            )
+        }
     </nav>
 </header>
