--- a/src/pages/participant/[participant].astro
+++ b/src/pages/participant/[participant].astro
@@ -11,16 +11,20 @@ const raw_participant_data = await fetch(
 ).then((res) => res.json());
 
 const participant_data = raw_participant_data[0];
-
-console.log(participant_data);
 ---
 
 <Layout title="Eurovision 24 homestudio">
-    <div class="w-96 p-6 shadow-2xl bg-slate-50 border-2 border-slate-200 rounded-md mx-auto">
+    <div
+        class="w-96 p-6 shadow-2xl bg-slate-50 border-2 border-slate-200 rounded-md mx-auto"
+    >
         <h1 class="text-3xl block text-center font-semibold mb-5 w-full">
             {participant_data.country}
         </h1>
-        <img src={participant_data.img} alt=""  class="border-2 rounded-xl border-slate-200 opacity-80"/>
+        <img
+            src={participant_data.img}
+            alt=""
+            class="border-2 rounded-xl border-slate-200 opacity-80"
+        />
         <div class="text-center py-5">
             <p>{participant_data.name}</p><p>{participant_data.song}</p>
         </div>
@@ -80,7 +84,9 @@ console.log(participant_data);
                 </div>
             </form>
             <div class="text-center">
-                <button onclick="history.back()" class="mt-3 p-2 bg-slate-200">Go Back</button>
+                <button onclick="history.back()" class="mt-3 p-2 bg-slate-200"
+                    >Go Back</button
+                >
             </div>
         </div>
     </div>
