--- a/src/pages/round/[round].astro
+++ b/src/pages/round/[round].astro
@@ -4,7 +4,17 @@ import Navbar from "../../components/Navbar.astro";
 
 export const api_url = import.meta.env.API_URL;
 
+const api_key = Astro.cookies.get("apikey");
+
+if (!api_key) {
+    return Astro.redirect("/login");
+}
+
 const { round } = Astro.params;
+
+if (!round || !["1", "2", "3"].includes(round)) {
+    return Astro.redirect("/404");
+}
 
 type Participant = {
     id: number;
@@ -25,7 +35,7 @@ const participant_data: Participant[] = await participants.json();
 <Layout title="Eurovision 24 homestudio">
     {
         participant_data.map((participant) => (
-            <a href={"/participant/"+participant.country}>
+            <a href={"/participant/" + participant.country}>
                 <section class="flex flex-1 mb-5 border rounded-xl p-4 shadow gap-5 items-center">
                     <div class="text-3xl w-16 text-center">
                         {participant.turn}
