--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@ const api_key = Astro.cookies.get("apikey");
 <header class="mb-5 bg-slate-600 p-3 text-slate-200">
     <nav class="flex justify-between align-middle">
         <a href="/" class="navbar-brand font-semibold flex">
-            <img src="/public/e24hs.png" alt="E24hs logo" class="w-12 rounded-full"><p class="self-center ml-3">E24hs</p>
+            <img src="/e24hs.png" alt="E24hs logo" class="w-12 rounded-full"><p class="self-center ml-3">E24hs</p>
         </a>
         <ul class="flex flex-1 justify-center items-center gap-16 max-lg:hidden">
             {
@@ -37,14 +37,14 @@ const api_key = Astro.cookies.get("apikey");
         {
             api_key && (
                 <a href="/logout" class="self-center">
-                    <img src="/public/power-off.svg" alt="" class="w-6">
+                    <img src="/power-off.svg" alt="" class="w-6">
                 </a>
             )
         }
         {
             !api_key && (
                 <a href="/login" class="self-center">
-                    <img src="/public/power-off.svg" alt="" class="w-6 border-2 rounded-full p-4">
+                    <img src="/power-off.svg" alt="" class="w-6 border-2 rounded-full p-4">
                 </a>
             )
         }
