--- a/src/pages/participant/[participant].astro
+++ b/src/pages/participant/[participant].astro
@@ -2,15 +2,71 @@
 import Layout from "../../layouts/Layout.astro";
 import Navbar from "../../components/Navbar.astro";
 
-export const api_url = import.meta.env.API_URL;
+import { db, like, eq, Participants, Reviews } from 'astro:db'
 
 const { participant } = Astro.params;
 
-const raw_participant_data = await fetch(
-    api_url + "/participant/" + participant,
-).then((res) => res.json());
+let participant_id = null
+if (participant != undefined) {
+    participant_id = parseInt(participant);
+} else {
+    return Astro.redirect("/404");
+}
+
+const raw_participant_data = await db.select().from(Participants).where(eq(Participants.id, participant_id));
 
 const participant_data = raw_participant_data[0];
+
+let participant_score = {
+    melody: "0",
+    performance: "0",
+    wardrobe: "0"
+}
+
+if (Astro.request.method === "POST") {
+    const data = await Astro.request.formData();
+    if (data.get("melody")) {
+        participant_score.melody = data.get("melody") as string;
+    }
+    if (data.get("performance")) {
+        participant_score.performance = data.get("performance") as string;
+    }
+    if (data.get("wardrobe")) {
+        participant_score.wardrobe = data.get("wardrobe") as string;
+    }
+
+    const existing_review = await db.select().from(Reviews).where(eq(Reviews.participant_id, participant_id) && eq(Reviews.user_id, parseInt(data.get("user_id") as string)));
+
+    if (existing_review.length == 0) {
+        console.log("inserting review");
+        await db.insert(Reviews).values([
+            {
+                user_id: parseInt(data.get("user_id") as string),
+                participant_id: participant_id,
+                round_num: parseInt(data.get("round_num") as string),
+                melody: parseInt(participant_score.melody),
+                performance: parseInt(participant_score.performance),
+                wardrobe: parseInt(participant_score.wardrobe)
+            }
+        ])
+    } else {
+        console.log("updating review");
+        await db.update(Reviews).set({
+            melody: parseInt(participant_score.melody),
+            performance: parseInt(participant_score.performance),
+            wardrobe: parseInt(participant_score.wardrobe)
+        }).where(eq(Reviews.participant_id, participant_id) && eq(Reviews.user_id, parseInt(data.get("user_id") as string)))
+    }
+
+}
+
+   
+const logged_user_id = Astro.cookies.get("logged_user");
+
+if (!logged_user_id) {
+    return Astro.redirect("/login");
+}
+
 ---
 
 <Layout title="Eurovision 24 homestudio">
@@ -22,7 +78,7 @@ const participant_data = raw_participant_data[0];
         </h1>
         <img
             src={participant_data.img}
-            alt=""
+            alt={participant_data.country}
             class="border-2 rounded-xl border-slate-200 opacity-80"
         />
         <div class="text-center py-5">
@@ -31,46 +87,46 @@ const participant_data = raw_participant_data[0];
 
         <div>
             <form method="post">
+                <input type="hidden" name="participant_id" value={participant_id} />
+                <input type="hidden" name="user_id" value={logged_user_id["value"]} />
+                <input type="hidden" name="round_num" value="1" />
                 <div class="flex gap-5 w-full text-center">
                     <div>
                         <label for="melody" class="block text-base mb-2"
-                            >Melodia</label
-                        >
+                            >Melodia</label>
                         <input
                             type="number"
                             name="melody"
                             id="melody"
                             min="4"
                             max="10"
-                            value="0"
+                            value={participant_score.melody}
                             class="border text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 text-center"
                         />
                     </div>
                     <div>
                         <label for="performance" class="block text-base mb-2"
-                            >Esitys</label
-                        >
+                            >Esitys</label>
                         <input
                             type="number"
                             name="performance"
                             id="performance"
                             min="4"
                             max="10"
-                            value="0"
+                            value={participant_score.performance}
                             class="border text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 text-center"
                         />
                     </div>
                     <div>
                         <label for="wardrobe" class="block text-base mb-2"
-                            >Vaatetus</label
-                        >
+                            >Vaatetus</label>
                         <input
                             type="number"
                             name="wardrobe"
                             id="wardrobe"
                             min="4"
                             max="10"
-                            value="0"
+                            value={participant_score.wardrobe}
                             class="border text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 text-center"
                         />
                     </div>
