--- a/src/pages/round/[round].astro
+++ b/src/pages/round/[round].astro
@@ -2,13 +2,8 @@
 import Layout from "../../layouts/Layout.astro";
 import Navbar from "../../components/Navbar.astro";
 
-export const api_url = import.meta.env.API_URL;
-
-const api_key = Astro.cookies.get("apikey");
-
-if (!api_key) {
-    return Astro.redirect("/login");
-}
+import { db, like, Participants } from 'astro:db'
+import Participant from "../participant/[participant].astro";
 
 const { round } = Astro.params;
 
@@ -16,26 +11,16 @@ if (!round || !["1", "2", "3"].includes(round)) {
     return Astro.redirect("/404");
 }
 
-type Participant = {
-    id: number;
-    year: number;
-    country: string;
-    country_img: string;
-    name: string;
-    song: string;
-    img: string;
-    url: string;
-    round_num: number;
-    turn: number;
-};
-const participants = await fetch(api_url + "/participant/round/" + round);
-const participant_data: Participant[] = await participants.json();
+Astro.cookies.set("round", round);
+
+const participants = await db.select().from(Participants).where(like(Participants.round_num, round)).orderBy(Participants.turn);
+
 ---
 
 <Layout title="Eurovision 24 homestudio">
     {
-        participant_data.map((participant) => (
-            <a href={"/participant/" + participant.country}>
+        participants.map((participant) => (
+            <a href={"/participant/" + participant.id}>
                 <section class="flex flex-1 mb-5 border rounded-xl p-4 shadow gap-5 items-center">
                     <div class="text-3xl w-16 text-center">
                         {participant.turn}
