--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,17 +15,18 @@ import Navbar from "../components/Navbar.astro";
 		<tr>
 			<td class="text-right">7.5.2024</td>
 			<td class="text-center">22.00</td>
-			<td>1. Semifinaali</td>
+			<td><a href="/round/1">1. Semifinaali</a></td>
 		</tr>
 		<tr>
 			<td class="text-right">9.5.2024</td>
 			<td class="text-center">22.00</td>
-			<td>2. Semifinaali</td>
+			<td><a href="/round/2">2. Semifinaali</a></td>
 		</tr>
 		<tr>
-			<td class="text-right">11.5.2024</td>
-			<td class="text-center">22.00</td>
-			<td>Finaali</td>
+		
+				<td class="text-right">11.5.2024</td>
+				<td class="text-center">22.00</td>
+				<td><a href="/round/3">Finaali</a></td>
 		</tr>
 	</table>
 </Layout>
