--- a/src/pages/participant/[participant].astro
+++ b/src/pages/participant/[participant].astro
@@ -16,10 +16,10 @@ if (participant != undefined) {
 // Check if user logged in
 const check_login = Astro.cookies.get("logged_user");
 let user_id = null
-if (!check_login) {
-    return Astro.redirect("/login");
+if (check_login) {
+    user_id = parseInt(check_login["value"]);
 } else {
-    user_id = parseInt(Astro.cookies.get("logged_user")["value"]);
+    return Astro.redirect("/login");
 }
 
 const raw_participant_data = await db.select().from(Participants).where(eq(Participants.id, participant_id));
@@ -33,7 +33,7 @@ let participant_score = {
 }
 
 // Check if participant has already reviewed
-const participant_review = await db.select().from(Reviews).where(eq(Reviews.participant_id, participant_id) && eq(Reviews.user_id, user_id));
+const participant_review = await db.select().from(Reviews).where(and(eq(Reviews.participant_id, participant_id), eq(Reviews.user_id, user_id)));
 
 if (participant_review.length > 0) {
     participant_score = {
@@ -55,9 +55,8 @@ if (Astro.request.method === "POST") {
         participant_score.wardrobe = data.get("wardrobe") as string;
     }
 
-    const existing_review = await db.select().from(Reviews).where(eq(Reviews.participant_id, participant_id) && eq(Reviews.user_id, parseInt(data.get("user_id") as string)));
 
-    if (existing_review.length == 0) {
+    if (participant_review.length == 0) {
         console.log("inserting review");
         await db.insert(Reviews).values([
             {
