--- a/src/pages/participant/[participant].astro
+++ b/src/pages/participant/[participant].astro
@@ -22,6 +22,15 @@ if (check_login) {
     return Astro.redirect("/login");
 }
 
+// Check if round cookie set
+const round = Astro.cookies.get("round");
+let back_link = ""
+if (!round || !["1", "2", "3"].includes(round["value"])) {
+    return Astro.redirect("/");
+} else {
+    back_link = "/round/" + round["value"];
+}
+
 const raw_participant_data = await db.select().from(Participants).where(eq(Participants.id, participant_id));
 
 const participant_data = raw_participant_data[0];
@@ -151,10 +160,9 @@ if (Astro.request.method === "POST") {
                     />
                 </div>
             </form>
-            <div class="text-center">
-                <button onclick="history.back()" class="mt-3 p-2 bg-slate-200"
-                    >Go Back</button
-                >
+            <div class="text-center mt-5">
+                <a href={ back_link } class="p-2 bg-slate-200 hover:bg-transparent hover:border-2 rounded-sm"
+                    >Palaa</a>
             </div>
         </div>
     </div>
