CHANGE Remove semifilnals

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,13 +18,7 @@ const is_logged = Astro.cookies.get("logged_user");
         <ul
             class="flex flex-1 justify-center items-center gap-16 max-lg:hidden">
             <li>
-                <a href="/round/1">1. Semifinaali</a>
-            </li>
-            <li>
-                <a href="/round/2">2. Semifinaali</a>
-            </li>
-            <li>
-                <a href="/round/3">Finaali</a>
+                <a href="/participant_list">Esiintyjät</a>
             </li>
         </ul>
         {
