--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,28 +5,7 @@ import Navbar from "../components/Navbar.astro";
 
 <Layout title="Eurovision 24 homestudio">
 	<h1 class="text-2xl font-semibold mb-5">Tervetuloa kisaamaan</h1>
-	<p>Euroviisut 2024 alkavat olla lähellä. Tässä tarkempaa aikataulua:</p>
-	<table class="w-15 mt-5">
-		<tr>
-			<th class="w-2/5">Pvm</th>
-			<th class="w-1/5">Klo</th>
-			<th class="w-2/5">Kisa</th>
-		</tr>
-		<tr>
-			<td class="text-right">7.5.2024</td>
-			<td class="text-center">22.00</td>
-			<td><a href="/round/1">1. Semifinaali</a></td>
-		</tr>
-		<tr>
-			<td class="text-right">9.5.2024</td>
-			<td class="text-center">22.00</td>
-			<td><a href="/round/2">2. Semifinaali</a></td>
-		</tr>
-		<tr>
-		
-				<td class="text-right">11.5.2024</td>
-				<td class="text-center">22.00</td>
-				<td><a href="/round/3">Finaali</a></td>
-		</tr>
-	</table>
+	
+	<div><a href="/participant_list">Esiintyjät</a></div>
+
 </Layout>
