--- a/src/pages/participant_list.astro
+++ b/src/pages/participant_list.astro
@@ -1,17 +1,9 @@
 ---
-import Layout from "../../layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro";
 
 import { db, like, Participants } from 'astro:db'
 
-const { round } = Astro.params;
-
-if (!round || !["1", "2", "3"].includes(round)) {
-    return Astro.redirect("/404");
-}
-
-Astro.cookies.set("round", round, { path: "/" });
-
-const participants = await db.select().from(Participants).where(like(Participants.round_num, round)).orderBy(Participants.turn);
+const participants = await db.select().from(Participants).orderBy(Participants.turn);
 
 ---
 
