ADD Results page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,6 @@ import Navbar from "../components/Navbar.astro";
 	<h1 class="text-2xl font-semibold mb-5">Tervetuloa kisaamaan</h1>
 	
 	<div><a href="/participant_list">Esiintyjät</a></div>
+	<div><a href="/results">Tuloksiin</a></div>
 
 </Layout>
